--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -12,11 +12,12 @@
 
 nav .navItem{
   margin-left: 1rem;
-  padding: 1rem 1.5rem;
+  padding: 0.5rem 1.2rem;
   background-color: rgb(166, 206, 57);
   text-decoration: none;
   border-radius: 0.5rem;
   color: rgb(87, 87, 86);
+  font-family: Helvetica, Arial, sans-serif;
 }
 
 nav .navItem:hover{
