--- a/src/components/ItemDetail/ItemDetail.module.css
+++ b/src/components/ItemDetail/ItemDetail.module.css
@@ -8,27 +8,48 @@
   width: 20rem;
 }
 
-.detailProductContainer .infoDetailProduct{
+.infoDetailProduct{
   width: 20rem;
   background-color: rgb(166, 206, 57);
   border-radius: 0.5rem;
   padding: 1rem;
 }
 
-.detailProductContainer .nameDetailProduct{
+.nameDetailProduct{
   color: rgb(0, 82, 61);
   font-size: 2rem;
   font-family: Helvetica, Arial, sans-serif;
 }
 
-.detailProductContainer .priceDetailProduct{
+.priceDetailProduct{
   color: rgb(0, 82, 61);
   font-size: 1.4rem;
   font-family: Helvetica, Arial, sans-serif;
 }
 
-.detailProductContainer .categoryProduct{
+.categoryProduct{
   color: rgb(0, 82, 61);
   font-size: 1rem;
   font-family: Helvetica, Arial, sans-serif;
+}
+
+.contenedorBoton{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.boton{
+  border-radius: 1rem;
+  background-color: white;
+  padding: 0.5rem 1rem;
+  margin: 1rem;
+  color: rgb(0, 82, 61);
+  font-family: Helvetica, Arial, sans-serif;
+  text-decoration: none;
+}
+
+.boton:hover{
+  background-color: rgb(0, 82, 61);
+  color: rgb(166, 206, 57);
 }
